--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -34,6 +34,9 @@ spring:
         min-idle: 0 # 连接池中的最小空闲连接
     timeout: 3000ms # 连接超时时间（毫秒
 
+  kafka:
+    bootstrap-servers: 192.168.1.111:9092
+
 file:
   #文件上传目录 绝对路径 末尾请加 /
   path: F:/files/ #windows
